--- a/contact.css
+++ b/contact.css
@@ -3,7 +3,7 @@
 /* ========================================= */
 
 body {
-    background-color: #FFFFFF; /* Fond blanc clair */
+    background-color: #F8F8F8; /* Fond blanc clair */
     color: #333333; /* Texte noir par défaut pour une lisibilité parfaite */
 }
 
